# rustrans

./: Cargo.toml
configs/: conf.example.json
src/: lib.rs  main.rs
src/common/: conf.rs
src/deepl/: mod.rs  types.rs
src/translator/: deepl.rs  mod.rs
src/utils/: file.rs  json.rs  list.rs  mod.rs  path.rs
tests/: test.rs  test.txt
