[package]
name = "rustrans"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203" , features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
